# storage/api-docs/api-docs.json
@@ -318,6 +318,116 @@
                 ]
             }
         },
+        "/api/post/comment": {
+            "put": {
+                "tags": [
+                    "帖子组"
+                ],
+                "summary": "修改帖子评论/回复评论",
+                "description": "修改评论数据发布者ID 与 登录用户ID一致",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "post_comment_id",
+                                    "up_comment_content"
+                                ],
+                                "properties": {
+                                    "post_comment_id": {
+                                        "description": "修改的评论ID",
+                                        "type": "int"
+                                    },
+                                    "up_comment_content": {
+                                        "description": "修改的评论内容",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            },
+                            "example": {
+                                "post_comment_id": "1",
+                                "up_comment_content": "修改评论内容"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "204": {
+                        "description": "SUCCESS/成功"
+                    }
+                },
+                "security": [
+                    {
+                        "api_token": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "帖子组"
+                ],
+                "summary": "发布帖子评论/回复评论",
+                "description": "回复主贴 type : 0 ，回复评论 type : 1(回复评论增加URL数据// reply_comment_id ：要回复的评论ID,// reply_comment_user_id ：要回复的评论用户ID)",
+                "responses": {
+                    "204": {
+                        "description": "SUCCESS/成功",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "post_id",
+                                        "comment_user_id",
+                                        "comment_content",
+                                        "type"
+                                    ],
+                                    "properties": {
+                                        "post_id": {
+                                            "description": "帖子ID",
+                                            "type": "int"
+                                        },
+                                        "comment_user_id": {
+                                            "description": "发布评论用户ID",
+                                            "type": "int"
+                                        },
+                                        "comment_content": {
+                                            "description": "评论内容",
+                                            "type": "string"
+                                        },
+                                        "type": {
+                                            "description": "发布类型0回复主贴 1回复评论",
+                                            "type": "int"
+                                        },
+                                        "reply_comment_id": {
+                                            "description": "上级评论ID",
+                                            "type": "int"
+                                        },
+                                        "reply_comment_user_id": {
+                                            "description": "上级评论用户ID",
+                                            "type": "int"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "post_id": "10",
+                                    "comment_user_id": "100009",
+                                    "comment_content": "评论的内容",
+                                    "type": "1",
+                                    "reply_comment_id": "3",
+                                    "reply_comment_user_id": "100008"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api_token": []
+                    }
+                ]
+            }
+        },
         "/projects/{id}": {
             "get": {
                 "tags": [
